tests/baselines/reference/annotationApplicationError16.errors.txt
tests/cases/conformance/annotations/annotationApplicationError16.ets(6,1): error TS28021: Annotation have to be applied only for non-abstract class declarations and method declarations in non-abstract classes, got: '@Anno
abstract class C {
    @Anno
    abstract foo();
}'.
tests/cases/conformance/annotations/annotationApplicationError16.ets(8,5): error TS28021: Annotation have to be applied only for non-abstract class declarations and method declarations in non-abstract classes, got: '@Anno
    abstract foo();'.


==== tests/cases/conformance/annotations/annotationApplicationError16.ets (2 errors) ====
    @interface Anno {
        a: number = 10
        b: string[] = []
    }
    
    @Anno
    ~~~~~
!!! error TS28021: Annotation have to be applied only for non-abstract class declarations and method declarations in non-abstract classes, got: '@Anno
!!! error TS28021: abstract class C {
!!! error TS28021:     @Anno
!!! error TS28021:     abstract foo();
!!! error TS28021: }'.
    abstract class C {
        @Anno
        ~~~~~
!!! error TS28021: Annotation have to be applied only for non-abstract class declarations and method declarations in non-abstract classes, got: '@Anno
!!! error TS28021:     abstract foo();'.
        abstract foo();
    }
    